--- a/phoneapp/package.json
+++ b/phoneapp/package.json
@@ -18,5 +18,11 @@
   "bugs": {
     "url": "https://github.com/Student2003/automatic-system/issues"
   },
-  "homepage": "https://github.com/Student2003/automatic-system#readme"
+  "homepage": "https://github.com/Student2003/automatic-system#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
